[tool.poetry]
name = "Data Analysis"
version = "0.1.0"
description = "Environment for Data Analysis"
authors = ["<info@example.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
xgboost = "^1.7.5"
scikit-learn = "^1.2.2"
numpy = "^1.24.3"
seaborn = "^0.12.2"
plotly = "^5.14.1"
matplotlib = "^3.7.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
japanize-matplotlib = "^1.1.3"
openpyxl = "^3.1.2"
plotly-express = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"